DON-318 - fix suggested amount spacing

--- a/src/app/donation-start/donation-start.component.scss
+++ b/src/app/donation-start/donation-start.component.scss
@@ -155,6 +155,10 @@
   }
 }
 
+.c-suggested-amounts {
+  margin: -2rem 0 2rem 0;
+}
+
 .c-suggested-amount__button {
   flex: 1 0 auto;
   width: calc((100 - 1rem) / 3);
